# PuzzleSolver

./: .gitignore  README.md  pyproject.toml
lib/: rlms-0.1.1-py3-none-any.whl
openevolve/moscow_puzzles/: config.yaml  evaluation_system.txt  evaluation_user.txt  evaluator.py  initial_program.py  problem_250.json  run_evolution.sh
openevolve/moscow_puzzles/openevolve_output/best/: best_program_info.json
openevolve/moscow_puzzles/openevolve_output/checkpoints/checkpoint_1/: best_program.py  best_program_info.json  metadata.json
openevolve/moscow_puzzles/openevolve_output/checkpoints/checkpoint_2/: best_program.py  best_program_info.json  metadata.json
openevolve/moscow_puzzles/openevolve_output/checkpoints/checkpoint_3/: best_program_info.json  metadata.json
openevolve/rlm_policy/: README.md  config.yaml  initial_program.py  run_evolution.sh
openevolve/rlm_policy/openevolve_output_20260322_225810_514823/best/: best_program.py
rlm/experiments/: quickstart.py
rlm/experiments/moscow_puzzles/: rlm_2026-02-21_11-51-46_7756ff77.jsonl
rlm/experiments/moscow_puzzles/puzzles/: puzzle_014.json  puzzle_247.json  puzzle_248.json  puzzle_249.json  puzzle_250.json  puzzle_251.json  puzzle_252.json  puzzle_253.json  puzzle_254.json  puzzle_284.json  puzzle_285.json  puzzle_286.json  puzzle_317.json  puzzle_334.json  puzzle_342.json
rlm/experiments/moscow_puzzles/questions/: 250.txt
src/puzzlesolver/: __init__.py  shared.py
src/puzzlesolver/openevolve/: __init__.py  openevolve_run.py  rlm_policy_evaluator.py
src/puzzlesolver/rlm/: __init__.py  rlm_run.py
(+10 files in other folders)
