[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puzzlesolver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "openevolve",
    "python-dotenv",
    "rlms"
]

[tool.uv.sources]
rlms = { path = "lib/rlms-0.1.1-py3-none-any.whl" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
